# turbo-crawl

./: .env.example  .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  FINDINGS-nextjs-render-tier.md  FINDINGS-playwright-facade-gaps.md  FINDINGS-rsc-hydration-wall.md  I-GAVE-UP-PLEASE-DO-MY-WORK.md  LICENSE  PUBLISHING.md  README.md  RUST-PORT-GAPS.md  SPEC.md  STATUS.md  TURBO-TEST-BROWSER-ENV-ISSUE.md  biome.json  cli.js  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release-py.yml  release.yml  rust-crates-publish.yml  rust-napi-prebuild.yml
.serena/: project.yml
adapters/: playwright.mjs
bench/: crawl.mjs  extract.mjs
docs/: README.md  js-execution-tier.md  render-geometry-loop.md  turbo-dom-changes.md
docs/modules/: actions.md  aria-snapshot.md  ax.md  (+31 more)
mcp/: handlers.mjs  server.mjs
playwright/: context-state.mjs  expect.mjs  index.mjs  loader-hooks.mjs  net-events.mjs  register.mjs  shim.mjs  storage.mjs  test.mjs
rust/: .gitignore  Cargo.toml  HEADLESS-HYDRATION.md  README.md
rust/crates/turbo-crawl-core/: Cargo.toml
rust/crates/turbo-crawl-core/src/: cache.rs  cookies.rs  crawl.rs  frontier.rs  lib.rs  net.rs  robots.rs  url.rs
rust/crates/turbo-crawl-core/tests/: parity.rs
rust/crates/turbo-crawl-mcp/: Cargo.toml
rust/crates/turbo-crawl-mcp/src/: lib.rs  main.rs
rust/crates/turbo-crawl-napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
rust/crates/turbo-crawl-napi/__test__/: smoke.cjs
rust/crates/turbo-crawl-napi/src/: lib.rs  session.rs
rust/crates/turbo-crawl-page/: Cargo.toml
rust/crates/turbo-crawl-page/src/: lib.rs
rust/crates/turbo-crawl-render/: Cargo.toml  HYDRATION-BINDING-GAPS.md
rust/crates/turbo-crawl-render/scripts/: vendor-browser-env.sh
rust/crates/turbo-crawl-render/src/: browser_env.rs  browser_env_upstream.rs  dom.rs  lib.rs  runtime.rs  tree_backend.rs
rust/crates/turbo-crawl-render/tests/: render.rs
rust/crates/turbo-crawl-transform/: Cargo.toml
rust/crates/turbo-crawl-transform/src/: lib.rs
rust/crates/turbo-crawl-view/: Cargo.toml
rust/crates/turbo-crawl-view/benches/: views.rs
rust/crates/turbo-crawl-view/src/: actions.rs  detect.rs  extract.rs  hydration.rs  lib.rs  markdown.rs  query.rs  schema.rs
rust/crates/turbo-crawl-view/tests/: parity.rs
rust/crates/turbo-surf-core/: Cargo.toml
rust/crates/turbo-surf-core/src/: akamai.rs  aws_waf.rs  cache.rs  challenge.rs  cloudflare.rs  crawl.rs  fingerprint.rs  lib.rs  measure.rs  net.rs  robots.rs  url.rs
rust/crates/turbo-surf-core/tests/: impersonate.rs  parity.rs
rust/crates/turbo-surf-mcp/: Cargo.toml
rust/crates/turbo-surf-mcp/src/: lib.rs  main.rs
rust/crates/turbo-surf-napi/: Cargo.toml  README.md  index.d.ts  index.js  package.json
rust/crates/turbo-surf-napi/__test__/: smoke.cjs
rust/crates/turbo-surf-napi/src/: lib.rs  session.rs
rust/crates/turbo-surf-page/: Cargo.toml
rust/crates/turbo-surf-page/src/: lib.rs
rust/crates/turbo-surf-py/: Cargo.toml  README.md  pyproject.toml
rust/crates/turbo-surf-py/python/turbo_surf/: __init__.py  __init__.pyi
rust/crates/turbo-surf-py/src/: errors.rs  lib.rs
rust/crates/turbo-surf-py/tests/: test_smoke.py
rust/crates/turbo-surf-raster/: Cargo.toml
rust/crates/turbo-surf-raster/src/: glyph.rs  lib.rs  paint_png.rs  paint_svg.rs  style_extract.rs
rust/crates/turbo-surf-raster/tests/: screenshot.rs
rust/crates/turbo-surf-render/: Cargo.toml  HYDRATION-BINDING-GAPS.md
rust/crates/turbo-surf-render/examples/: probe-script.rs
rust/crates/turbo-surf-render/scripts/: vendor-browser-env.sh
rust/crates/turbo-surf-render/src/: browser_env.rs  browser_env_upstream.rs  lib.rs  probe.rs  runtime.rs
rust/crates/turbo-surf-render/tests/: probe.rs  render.rs
rust/crates/turbo-surf-render/tests/fixture-gen/: gen-flight-client.mjs  gen-react-currenttarget.mjs  gen-react-document.mjs  gen-react-streaming.mjs  gen-react-transition-suspense.mjs
rust/crates/turbo-surf-render/tests/fixtures/: flight-client.html  react-currenttarget.html  react-document-hydration.html  react-streaming-hydration.html  react-transition-suspense.html
rust/crates/turbo-surf-transform/: Cargo.toml
rust/crates/turbo-surf-view/: Cargo.toml
rust/crates/turbo-surf-view/benches/: views.rs
rust/crates/turbo-surf-view/src/: actions.rs  aria.rs  aria_snapshot.rs  ax.rs  detect.rs  dom_ops.rs  extract.rs  lib.rs  locator.rs  markdown.rs  query.rs  schema.rs  text.rs  visible.rs  xpath.rs
rust/parity/: README.md  gen-golden.mjs  golden.json
rust/playwright-shim/: LIMITATIONS.md  dropin.spec.mjs  index.mjs  loader-hooks.mjs  loader.mjs  register.mjs  surface.test.mjs  test.mjs
rust/playwright-shim/e2e/: auth.spec.mjs  catalog.spec.mjs  hydration.spec.mjs  navigation.spec.mjs  no-chromium.spec.mjs  server.mjs  spa-server.mjs
scripts/: cc-check.cjs
src/: actions.mjs  aria-snapshot.mjs  aria.mjs  ax.mjs  batch.mjs  cache.mjs  cookies.mjs  crawl.mjs  detect.mjs  dispatcher.mjs  dom-ops.mjs  eval-guard.mjs  extract.mjs  frontier.mjs  hydration.mjs  index.mjs  locator.mjs  markdown.mjs  measure.mjs  net.mjs  page.mjs  query.mjs  robots.mjs  schema.mjs  text.mjs  url.mjs  visible.mjs  xpath.mjs
test/: actions.test.mjs  aria-snapshot.test.mjs  batch.test.mjs  cache.test.mjs  cookies.test.mjs  cov-ax.test.mjs  cov-cookies.test.mjs  cov-crawl.test.mjs  cov-detect.test.mjs  cov-extract.test.mjs  cov-frontier.test.mjs  cov-markdown.test.mjs  cov-net.test.mjs  cov-page.test.mjs  cov-robots.test.mjs  cov-schema.test.mjs  cov-text.test.mjs  cov-url.test.mjs  crawl.test.mjs  differential.test.mjs  dispatcher.test.mjs  eval-guard.test.mjs  expect.test.mjs  exports.test.mjs  extract.test.mjs  flow.test.mjs  frontier.test.mjs  helpers.mjs  hydration.test.mjs  index.test.mjs  js-render.test.mjs  lane-b.test.mjs  locator.test.mjs  mcp.test.mjs  measure.test.mjs  navigator.test.mjs  net.test.mjs  page-fetch.test.mjs  page.test.mjs  playwright-events.test.mjs  (+11 more)
todo/: README.md  probe-driven-auto-shim.md  wasm-browser-build.md
(+30 files in other folders)
