[package]
name = "turbo-crawl-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "turbo-crawl MCP server — native Rust binary, stdio JSON-RPC (no Node)"

[lib]
name = "turbo_crawl_mcp"
path = "src/lib.rs"

[[bin]]
name = "turbo-crawl-mcp"
path = "src/main.rs"

[dependencies]
turbo-crawl-core = { path = "../turbo-crawl-core" }
turbo-crawl-view = { path = "../turbo-crawl-view" }
turbo-dom-parser = { package = "turbo-dom", version = "0.3.1" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "io-std", "io-util", "net", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
