[package]
name = "turbo-crawl-napi"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "turbo-crawl napi-rs addon — in-process bridge from the Rust core to Node"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2"
turbo-crawl-core = { path = "../turbo-crawl-core" }
turbo-crawl-page = { path = "../turbo-crawl-page" }
turbo-crawl-view = { path = "../turbo-crawl-view" }
turbo-dom-parser = { package = "turbo-dom", version = "0.3.1" }
serde = "1"
serde_json = "1"

[build-dependencies]
napi-build = "2"
