[package]
name = "turbo-crawl-page"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "turbo-crawl tier 2: Page over the turbo-dom Rust parser + Navigator impl"

[dependencies]
turbo-crawl-core = { path = "../turbo-crawl-core", version = "0.1.11" }
turbo-dom-parser = { package = "turbo-dom", version = "0.3.2" }
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
