[package]
name = "turbo-crawl-view"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "turbo-crawl tier 2 views: text / xpath / query over the turbo-dom Tree"

[dependencies]
turbo-dom-parser = { package = "turbo-dom", version = "0.3.1" }
turbo-crawl-core = { path = "../turbo-crawl-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
url = "2"
