[package]
name = "turbo-surf-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Browserless native-speed crawler core (Rust port, tier 1)"

[features]
# Swap the stock reqwest+rustls client for wreq (BoringSSL), which presents a
# real Chrome TLS/JA3/JA4 + HTTP-2 (Akamai) fingerprint. Off by default: wreq
# pulls BoringSSL, which needs a C toolchain (cmake/nasm) to build. See net.rs.
impersonate = ["dep:wreq", "dep:wreq-util"]

[dependencies]
url = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "stream",
] }
# BoringSSL-backed client for the `impersonate` feature (see [features]).
# `stream` for incremental body reads (byte-cap enforcement); the codec features
# because wreq's Chrome emulation advertises `accept-encoding: gzip, deflate, br,
# zstd` — without them it can't decode the responses it asks for.
wreq = { version = "5.3", optional = true, features = [
    "stream",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
] }
wreq-util = { version = "2.2", optional = true }
encoding_rs = "0.8"
bytes = "1"
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "test-util",
    "net",
    "io-util",
] }
