[package]
name = "turbo-surf-napi"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "turbo-surf napi-rs addon — in-process bridge from the Rust core to Node"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2"
turbo-surf-core = { path = "../turbo-surf-core", version = "0.2.3" }
turbo-surf-page = { path = "../turbo-surf-page", version = "0.2.3" }
turbo-surf-view = { path = "../turbo-surf-view", version = "0.2.3" }
turbo-surf-render = { path = "../turbo-surf-render", version = "0.2.3" }
turbo-surf-transform = { path = "../turbo-surf-transform", version = "0.2.3" }
turbo-dom-parser = { package = "turbo-dom", version = "0.3.5" }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
napi-build = "2"
