[package]
name = "turbo-surf-page"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "turbo-surf tier 2: Page over the turbo-dom Rust parser + Navigator impl"

[dependencies]
turbo-surf-core = { path = "../turbo-surf-core", version = "0.2.1" }
turbo-dom-parser = { package = "turbo-dom", version = "0.3.5" }
async-trait = "0.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false }
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
