[package]
name = "turbo-surf-render"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "turbo-surf JS-execution tier (tier 3): deno_core isolate + rtdom↔V8 DOM binding"

[dependencies]
deno_core = "0.404"
# Error type for the ESM ModuleLoader (deno_core's ModuleLoaderError = deno_error::JsErrorBox);
# pinned to the version deno_core 0.404 resolves so the types unify.
deno_error = "=0.7.1"
# Direct v8 dep so the verbatim vendored `browser_env_upstream.rs` (which references
# the `v8` crate by its bare name) compiles. Pinned to the exact version deno_core
# resolves so both share one v8 — the binding installs into deno_core's own context.
v8 = "=149.4.0"
turbo-dom-parser = { package = "turbo-dom", version = "0.4.0" }
turbo-surf-core = { path = "../turbo-surf-core", version = "0.3.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
