[package]
name = "turbo-surf-view"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "turbo-surf tier 2 views: text / xpath / query over the turbo-dom Tree"

[dependencies]
turbo-dom-parser = { package = "turbo-dom", version = "0.3.5" }
turbo-surf-core = { path = "../turbo-surf-core", version = "0.2.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
url = "2"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "views"
harness = false
